--- a/css/style.css
+++ b/css/style.css
@@ -138,7 +138,8 @@
 		text-align: left;
 		padding:0;
 		margin:0;
-		font-size:4em
+		font-size:4em;
+		text-shadow: 4px 4px 2px rgba(150, 150, 150, 1);
 	}
 
 	.wrapper-page .hero h2 {
@@ -385,13 +386,14 @@
 	#menu {
 		margin-right:.5em;
 		float: right;
-		display: inline
+		display: inline;
+		background-color:#000;
 	}
 
 	#menu ul {
 		list-style: none;
-		padding:0;
-		margin:.7em 1em 0 0;
+		padding:10px 0px 10px 0px;
+		/*margin:.7em 1em 0 0;*/
 	}
 
 	#menu ul li {
@@ -407,8 +409,8 @@
 	}
 
 	#menu ul li a {
-		color: rgba(255, 255, 255, 0.9);
-		padding:.5em 1em
+		color: #fff;
+		padding:.5em 1em;
 	}
 
 	#menu ul li a:hover {
@@ -416,11 +418,11 @@
 	}
 
 	#menu ul li.current a {
-		border: solid 1px rgba(255, 255, 255, 0.3);
+		border: solid 1px rgba(255, 255, 255);
   		-webkit-border-radius: 4px;
   		-moz-border-radius: 4px;
   		border-radius: 4px;
-		background:  url(../images/trans.png) !important;
+/*		background:  url(../images/trans.png) !important;*/
 	}
 
 	#menu ul li.current a:hover {
@@ -436,7 +438,7 @@
 	.hero {
 		padding:1em 3em 0 3em;
 		text-align: center;
-		text-shadow: 0px -1px 1px rgba(0, 0, 0, 0.3);
+		/*text-shadow: 0px -1px 1px rgba(0, 0, 0, 0.3);*/
 		display: none
 	}
 
