--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,10 @@
 		font-weight: 300;
 		color:#111;
 		font-family: 'Open Sans', sans-serif;
+		text-shadow: 2px 2px 4px rgba(150, 150, 150, 0.2);
+  		-webkit-border-radius: 4px;
+  		-moz-border-radius: 4px;
+  		border-radius: 4px;
 	}
 
 	h1 { font-size: 3em; line-height:1.2em; margin:0 0 .8em; }
@@ -86,6 +90,17 @@
 		border:0;
 	}
 
+  .content-markup {
+      width:80%;
+      z-index:1000;
+      background:white;
+      background-color:rgba(255, 255, 255, 0.7);
+      padding:20px;
+      border-radius: 15px;
+  }
+  .content-markup h1, .content-markup h2, .content-markup p {
+  	color:#3d3d3d!important;
+  }
 /* icons */
 
 	.glyph-item {
@@ -145,9 +160,10 @@
 	.wrapper-page .hero h2 {
 		text-align: left;
 		padding:0;
+		font-weight:bold;
 		margin:.5em 0 0;
-		font-size:1.2em;
-		color: rgba(255, 255, 255, 0.7) !important;
+		font-size:1.3em;
+		text-shadow: 4px 4px 2px rgba(150, 150, 150, 1);
 	}
 
 	.row {
@@ -455,7 +471,7 @@
 
 	.hero h2 {
 		font-size:1.1em;
-		color: rgba(255, 255, 255, 0.9) !important;
+		color: rgba(255, 255, 255, 0.9);
 		margin-bottom:2em;
 	}
 
